front-end design changes

--- a/Package.html
+++ b/Package.html
@@ -100,7 +100,8 @@ http://www.templatemo.com/tm-409-travel
         </div>
 
         <div class="content">
-          <h3>Adventure & Tour <br> <delete>Rs 1000</delete> </h3>
+          <h3>Adventure & Tour <br> <del>Rs 1000</del> </h3>
+          
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla atque maiores eligendi eos dicta beatae
             magni. Eligendi tempora veritatis quis aspernatur ex nisi expedita aliquid? Officia, dolor omnis!
