--- a/book.html
+++ b/book.html
@@ -110,7 +110,7 @@ http://www.templatemo.com/tm-409-travel
 
                 <div class="inputbox">
                     <span>Phone:</span>
-                    <input type="number" placeholder="Enter Your PH" name="number">
+                    <input type="number" placeholder="Enter Your Phone Number" name="number">
                 </div>
                 <div class="inputbox">
                     <span>Address :</span>
@@ -135,10 +135,13 @@ http://www.templatemo.com/tm-409-travel
                 </div>
             </div>
 
-            <input type="submit" value="submit" class="btn" name="send">
+            <input type="submit" value="Confirm Booking" class="btn" name="send">
         </form>
 
     </section>
+    
+
+
 
     <!-- booking section end -->
 
