--- a/details.html
+++ b/details.html
@@ -207,7 +207,7 @@ http://www.templatemo.com/tm-409-travel
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum illum, consectetur, fugiat, impedit at error
                 autem corporis asperiores officiis sint eius tenetur ullam. Delectus quasi quam sint nam nostrum unde?
             </p>
-            <a href="book.html" class="btn">Book Now</a>
+            <a href="Package.html" class="btn">Book Now</a>
         </div>
     </section>
     <br><br>
